<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c3c9c9"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="nagarjuna.com.nagarjunaapa.fragments.FeePayment">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_full_name" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/faculty" />

            <Spinner
                android:id="@+id/facultySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/semester" />

            <Spinner
                android:id="@+id/semesterSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/tu_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_tu_regestration_no" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/amt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fee_amount"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/fee_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@color/colorPrimary"
                android:text="@string/pay"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
