<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nagarjuna.com.nagarjunaapp.Calender_activity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:title="">


        <Spinner
            android:id="@+id/monthHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:popupBackground="@color/colorPrimary" />


    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tb"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/daysHolder"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sun"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mon"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tue"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wed"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thu"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fei"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sat"
                android:textColor="#cc0000"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e5e5e5"
        android:layout_below="@+id/header" />
    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/header"
        android:background="@drawable/drop_shadow" />

</RelativeLayout>
