<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="nagarjuna.com.nagarjunaapp.Splash">

    <RelativeLayout
        android:id="@+id/splash_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_logo_icon"
            android:contentDescription="@string/college_icon" />

        <RelativeLayout
            android:id="@+id/college_name"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/icon"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/n"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/holo_blue_dark" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/agarjuna_CAP"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/holo_blue_dark" />

        </RelativeLayout>

        <TextView
            android:id="@+id/of_IT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon"
            android:layout_centerInParent="true"
            android:layout_marginTop="60dp"
            android:text="@string/of_information_technology"/>

    </RelativeLayout>

</LinearLayout>
