<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@drawable/nav_header_drawer_gradient"
    android:orientation="vertical">



    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@+id/college_add_and_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="10dp"
        android:background="@drawable/circle_logo"
        android:contentDescription="@string/logo" />

    <LinearLayout
        android:id="@+id/college_add_and_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/college_name"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/college_address"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white" />
    </LinearLayout>



</RelativeLayout>