<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:gravity="center|bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/eventtitle"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/item_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:layout_marginBottom="2dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/date"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <ImageView
                android:id="@+id/options"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"
                android:layout_weight="0.1"
                android:src="@drawable/ic_action_navigation_more_vert"
                android:contentDescription="@string/imageview" />


        </LinearLayout>

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/imageview" />

        <TextView
            android:id="@+id/item_description"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:lines="2"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/welcome_content_less"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:singleLine="true"/>

    </LinearLayout>

    <TextView
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />


</android.support.v7.widget.CardView>


